# arbalester

./: CMakeLists.txt  README.md  gitignore  main.cpp  resources.qrc  style.qss
ui/: compile.sh  mainwindow.cpp  mainwindow.ui
